[package]
name = "reactive-graph"
description = "Reactive Graph is a reactive runtime based on a graph database, empowering everyone to build reliable and efficient software."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"

default-run = "reactive-graph"

keywords = ["reactive", "runtime", "graph", "control-flow"]

[package.metadata.deb]
name = "reactive-graph"
maintainer-scripts = "debian/maintainer-scripts"
assets = [
    ["target/release/reactive-graph", "usr/bin/reactive-graph", "755"],
    ["target/release/reactive-graph-client", "usr/bin/reactive-graph-client", "755"],
    ["target/release/reactive-graph-server", "usr/bin/reactive-graph-server", "755"],
    ["target/release/reactive-graph-tooling", "usr/bin/reactive-graph-tooling", "755"],
    ["../../README.md", "usr/share/doc/reactive-graph/README", "644"],
    ["../../CHANGELOG.md", "usr/share/doc/reactive-graph/CHANGELOG", "644"],
    ["../../CODE_OF_CONDUCT.md", "usr/share/doc/reactive-graph/CODE_OF_CONDUCT", "644"],
    ["../../LICENSE.md", "usr/share/doc/reactive-graph/LICENSE", "644"],
    ["../../CONTRIBUTING.md", "usr/share/doc/reactive-graph/CONTRIBUTING", "644"],
    ["../../SECURITY.md", "usr/share/doc/reactive-graph/SECURITY", "644"],
    ["debian/etc/reactive-graph/var_file", "etc/reactive-graph/default/var_file", "644"],
    ["debian/usr/share/reactive-graph/etc/graphql.toml.template", "usr/share/reactive-graph/etc/graphql.toml.template", "644"],
    ["debian/usr/share/reactive-graph/etc/instance.toml.template", "usr/share/reactive-graph/etc/instance.toml.template", "644"],
    ["debian/usr/share/reactive-graph/etc/logging.toml.template", "usr/share/reactive-graph/etc/logging.toml.template", "644"],
    ["debian/usr/share/reactive-graph/etc/plugins.toml.template", "usr/share/reactive-graph/etc/plugins.toml.template", "644"],
    ["debian/usr/share/reactive-graph/etc/remotes.toml.template", "usr/share/reactive-graph/etc/remotes.toml.template", "644"],
    ["debian/usr/share/bash-completion/completions/reactive-graph", "usr/share/bash-completion/completions/reactive-graph", "644"],
    ["debian/usr/share/bash-completion/completions/reactive-graph-client", "usr/share/bash-completion/completions/reactive-graph-client", "644"],
    ["debian/usr/share/bash-completion/completions/reactive-graph-server", "usr/share/bash-completion/completions/reactive-graph-server", "644"],
    ["debian/usr/share/bash-completion/completions/reactive-graph-tooling", "usr/share/bash-completion/completions/reactive-graph-tooling", "644"],
    ["debian/usr/share/man/man1/reactive-graph.1", "usr/share/man/man1/reactive-graph.1", "644"],
    ["debian/usr/share/man/man1/reactive-graph-client.1", "usr/share/man/man1/reactive-graph-client.1", "644"],
    ["debian/usr/share/man/man1/reactive-graph-server.1", "usr/share/man/man1/reactive-graph-server.1", "644"],
    ["debian/usr/share/man/man1/reactive-graph-tooling.1", "usr/share/man/man1/reactive-graph-tooling.1", "644"],
    ["debian/usr/share/zsh/functions/Completion/Base/_reactive-graph", "usr/share/zsh/functions/Completion/Base/_reactive-graph", "644"],
    ["debian/usr/share/zsh/functions/Completion/Base/_reactive-graph-client", "usr/share/zsh/functions/Completion/Base/_reactive-graph-client", "644"],
    ["debian/usr/share/zsh/functions/Completion/Base/_reactive-graph-server", "usr/share/zsh/functions/Completion/Base/_reactive-graph-server", "644"],
    ["debian/usr/share/zsh/functions/Completion/Base/_reactive-graph-tooling", "usr/share/zsh/functions/Completion/Base/_reactive-graph-tooling", "644"],
    ["debian/var/lib/reactive-graph/default/plugins/deploy/.gitkeep", "var/lib/reactive-graph/default/plugins/deploy/.gitkeep", "644"],
    ["debian/var/lib/reactive-graph/default/plugins/installed/.gitkeep", "var/lib/reactive-graph/default/plugins/installed/.gitkeep", "644"],
    ["debian/var/lib/reactive-graph/default/repositories/default/types/components/.gitkeep", "var/lib/reactive-graph/default/repositories/default/types/components/.gitkeep", "644"],
    ["debian/var/lib/reactive-graph/default/repositories/default/types/entities/.gitkeep", "var/lib/reactive-graph/default/repositories/default/types/entities/.gitkeep", "644"],
    ["debian/var/lib/reactive-graph/default/repositories/default/types/relations/.gitkeep", "var/lib/reactive-graph/default/repositories/default/types/relations/.gitkeep", "644"],
    ["debian/var/lib/reactive-graph/default/repositories/default/types/flows/.gitkeep", "var/lib/reactive-graph/default/repositories/default/types/flows/.gitkeep", "644"],
    ["debian/var/lib/reactive-graph/default/repositories/default/instances/entities/.gitkeep", "var/lib/reactive-graph/default/repositories/default/instances/entities/.gitkeep", "644"],
    ["debian/var/lib/reactive-graph/default/repositories/default/instances/relations/.gitkeep", "var/lib/reactive-graph/default/repositories/default/instances/relations/.gitkeep", "644"],
    ["debian/var/lib/reactive-graph/default/repositories/default/instances/flows/.gitkeep", "var/lib/reactive-graph/default/repositories/default/instances/flows/.gitkeep", "644"],
]

[package.metadata.deb.systemd-units]
unit-name = "reactive-graph@"
enable = true
restart-after-upgrade = true

[dependencies]
actix-web = { workspace = true, features = ["rustls-0_23"] }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
clap-markdown = { workspace = true }
clap_complete = { workspace = true }
colored = { workspace = true }
json5 = { workspace = true, optional = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format", "ansi_writer"] }
rustyline = { workspace = true }
self_update = { workspace = true, default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellwords = { workspace = true }
tabled = { workspace = true }
thiserror = { workspace = true }
table_to_html = { workspace = true }
tokio = { workspace = true, features = ["macros", "time", "rt", "rt-multi-thread"] }
toml = { workspace = true, optional = true }
typed-builder = { workspace = true }
uuid = { workspace = true }

reactive-graph-config-model = { version = "0.10.0", path = "../config/model" }
reactive-graph-remotes-model = { version = "0.10.0", path = "../remotes/model" }
reactive-graph-graph = { version = "0.10.0", path = "../graph" }
reactive-graph-runtime-model = { version = "0.10.0", path = "../runtime/model" }
reactive-graph-runtime-api = { version = "0.10.0", path = "../runtime/api", optional = true }
reactive-graph-runtime-impl = { version = "0.10.0", path = "../runtime/impl", optional = true }
reactive-graph-client = { version = "0.10.0", path = "../client", optional = true }
reactive-graph-serde = { version = "0.10.0", path = "../serde" }
reactive-graph-table-model = { version = "0.10.0", path = "../table-model", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
clap_mangen = { workspace = true }
daemonize-me = { workspace = true }
xdg = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen-gix = { workspace = true, features = ["build", "cargo", "rustc", "si"] }

[features]
default = ["server", "client", "tooling", "json5", "toml"]
client = ["reactive-graph-client", "reactive-graph-table-model"]
server = ["reactive-graph-runtime-api", "reactive-graph-runtime-impl"]
tooling = []
json5 = ["dep:json5", "reactive-graph-serde/json5"]
toml = ["dep:toml", "reactive-graph-serde/toml"]

[[bin]]
name = "reactive-graph"
path = "src/bin_all.rs"

[[bin]]
name = "reactive-graph-client"
path = "src/bin_client.rs"

[[bin]]
name = "reactive-graph-server"
path = "src/bin_server.rs"

[[bin]]
name = "reactive-graph-tooling"
path = "src/bin_tooling.rs"
