[package]
name = "inexor-rgf-reactive"
description = "Inexor - Reactive Graph Flow - Reactive Instances"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
dashmap = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"]}
schemars = { workspace = true, features = [ "uuid1" ] }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
typed-builder = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

inexor-rgf-core-frp = { version = "0.10.0", path = "../core/frp" }
inexor-rgf-graph = { version = "0.10.0", path = "../graph" }
inexor-rgf-behaviour-api = { version = "0.10.0", path = "../behaviour-api" }
inexor-rgf-reactive-api = { version = "0.10.0", path = "../reactive-api" }
inexor-rgf-test-utils = { version = "0.10.0", path = "../test-utils", optional = true }

[dev-dependencies]
default-test = { workspace = true }
random-string = { workspace = true }
rand = { workspace = true }
rand_derive2 = { workspace = true }
stopwatch2 = { workspace = true }

inexor-rgf-test-utils = { version = "0.10.0", path = "../test-utils" }

[lib]
crate-type = ["lib"]
