[package]
name = "rgf"
description = "Reactive Graph Flow"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[package.metadata.deb]
name = "rgf"
maintainer-scripts = "debian/maintainer-scripts"
assets = [
    ["target/release/reactive-graph-rt-standalone", "usr/bin/inexor-rgf", "755"],
    ["../../README.md", "usr/share/doc/inexor-rgf/README", "644"],
    ["../../CHANGELOG.md", "usr/share/doc/inexor-rgf/CHANGELOG", "644"],
    ["../../CODE_OF_CONDUCT.md", "usr/share/doc/inexor-rgf/CODE_OF_CONDUCT", "644"],
    ["../../LICENSE.md", "usr/share/doc/inexor-rgf/LICENSE", "644"],
    ["../../CONTRIBUTING.md", "usr/share/doc/inexor-rgf/CONTRIBUTING", "644"],
    ["debian/etc/inexor-rgf/var_file", "etc/inexor-rgf/default/var_file", "644"],
    ["debian/etc/inexor-rgf/graphql.toml", "etc/inexor-rgf/default/graphql.toml", "644"],
    ["debian/etc/inexor-rgf/instance.toml", "etc/inexor-rgf/default/instance.toml", "644"],
    ["debian/etc/inexor-rgf/logging.toml", "etc/inexor-rgf/default/logging.toml", "644"],
    ["debian/etc/inexor-rgf/plugins.toml", "etc/inexor-rgf/default/plugins.toml", "644"],
    ["debian/usr/share/inexor-rgf/plugins/deploy/.gitkeep", "usr/share/inexor-rgf/default/plugins/deploy/.gitkeep", "644"],
    ["debian/usr/share/inexor-rgf/plugins/installed/.gitkeep", "usr/share/inexor-rgf/default/plugins/installed/.gitkeep", "644"],
    ["debian/var/lib/inexor-rgf/repositories/flows/.gitkeep", "var/lib/inexor-rgf/default/repositories/flows/.gitkeep", "644"],
]

[package.metadata.deb.systemd-units]
unit-name = "rgf@"
enable = true
restart-after-upgrade = true

[dependencies]
actix-web = { workspace = true, features = ["rustls-0_22"] }
clap = { workspace = true, features = ["derive", "env"] }
colored = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format", "ansi_writer"] }
rustyline = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellwords = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true, features = ["macros", "time", "rt", "rt-multi-thread"] }

reactive-graph-config-model = { version = "0.10.0", path = "../config/model" }
reactive-graph-remotes-model = { version = "0.10.0", path = "../remotes/model" }
reactive-graph-graph = { version = "0.10.0", path = "../graph" }
reactive-graph-runtime-model = { version = "0.10.0", path = "../runtime/model" }
reactive-graph-runtime-api = { version = "0.10.0", path = "../runtime/api" }
reactive-graph-runtime-impl = { version = "0.10.0", path = "../runtime/impl" }
reactive-graph-client = { version = "0.10.0", path = "../client", optional = true }

[features]
client = ["reactive-graph-client"]
default = ["client"]

[[bin]]
name = "rgf"
