[package]
name = "reactive-graph-serde"
description = "Reactive Graph - Serialization and Deserialization"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
json5 = { workspace = true, optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true, optional = true }

[features]
default = []
json5 = ["dep:json5"]
toml = ["dep:toml"]
