[package]
name = "inexor-rgf-rt-standalone"
description = "Inexor - Reactive Graph Flow - Runtime - Standalone"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
actix-web = { workspace = true, features = ["rustls"] }
clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format", "ansi_writer"] }
tabled = { workspace = true }
tokio = { workspace = true, features = ["macros", "time", "rt", "rt-multi-thread"] }

inexor-rgf-rt = { version = "0.9.1", path = "../runtime" }
inexor-rgf-core-model = { version = "0.9.1", path = "../core/model" }
inexor-rgf-client = { version = "0.9.1", path = "../client" }

[[bin]]
name = "inexor-rgf-rt-standalone"
