[package]
name = "reactive-graph-table-model"
description = "Reactive Graph Flow"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tabled = { workspace = true }
table_to_html = { workspace = true }
uuid = { workspace = true }

reactive-graph-remotes-model = { version = "0.10.0", path = "../remotes/model" }
reactive-graph-graph = { version = "0.10.0", path = "../graph" }
reactive-graph-plugin-model = { version = "0.10.0", path = "../plugin/model" }
