[package]
name = "inexor-rgf-test-utils"
description = "Inexor - Reactive Graph Flow - Test Utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
default-test = { workspace = true }
random-string = { workspace = true }
rand = { workspace = true }
rand_derive2 = { workspace = true }
serde_json = { workspace = true }

[lib]
crate-type = ["lib"]
