[package]
name = "reactive-graph-test-utils"
description = "Inexor - Reactive Graph Flow - Test Utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
colored = { workspace = true }
default-test = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "ansi_writer"] }
random-string = { workspace = true }
rand = { workspace = true }
rand_derive2 = { workspace = true }
serde_json = { workspace = true }

[lib]
crate-type = ["lib"]
