[package]
name = "waiter_codegen"
description = "Macro for Waiter DI"
version = "1.6.5"
authors = [
    "dmitryb.dev@gmail.com",
    "Andreas Schaeffer <hanack@nooblounge.net>"
]
edition = "2021"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/dmitryb-dev/waiter"

[dependencies]
quote = "1.0"
regex = "1.5"
proc-macro2 = "1.0"
syn = { version = "1.0", features = [ "full" ] }

[lib]
proc-macro = true

[features]
async = []
