[package]
name = "inexor-rgf-event-api"
description = "Inexor - Reactive Graph Flow - Event - API"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
async-trait = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
springtime-di = { workspace = true, features = [ "threadsafe", "derive" ] }
uuid = { workspace = true, features = ["serde", "v4"] }

inexor-rgf-graph = { version = "0.10.0", path = "../graph" }
inexor-rgf-reactive-model-impl = { version = "0.10.0", path = "../reactive/model/impl" }
inexor-rgf-lifecycle = { version = "0.10.0", path = "../lifecycle" }

[lib]
crate-type = ["lib"]
