[package]
name = "inexor-rgf-event-impl"
description = "Inexor - Reactive Graph Flow - Event - Implementation"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
springtime-di = { workspace = true, features = [ "threadsafe", "derive" ] }

inexor-rgf-graph = { version = "0.10.0", path = "../graph" }
#inexor-rgf-event-api = { version = "0.10.0", path = "../event-api" }
inexor-rgf-lifecycle = { version = "0.10.0", path = "../lifecycle" }
inexor-rgf-runtime-model = { version = "0.10.0", path = "../runtime/model" }
inexor-rgf-reactive-model-impl = { version = "0.10.0", path = "../reactive/model/impl" }

[lib]
crate-type = ["lib"]
