[package]
name = "inexor-rgf-command-api"
description = "Inexor - Reactive Graph Flow - Command - API"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../README.md"

[dependencies]
async-trait = { workspace = true }
springtime-di = { workspace = true, features = [ "threadsafe", "derive" ] }

inexor-rgf-command-model = { version = "0.10.0", path = "../model" }
inexor-rgf-graph = { version = "0.10.0", path = "../../graph" }
inexor-rgf-lifecycle = { version = "0.10.0", path = "../../lifecycle" }
inexor-rgf-reactive-service-api = { version = "0.10.0", path = "../../reactive/service/api" }
inexor-rgf-type-system-api = { version = "0.10.0", path = "../../type-system/api" }

[dev-dependencies]

[lib]
crate-type = ["lib"]
