[package]
name = "reactive-graph-command-api"
description = "Reactive Graph - Command - API"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../../README.md"

[dependencies]
async-trait = { workspace = true }
springtime-di = { workspace = true, features = ["threadsafe", "derive"] }

reactive-graph-command-model = { version = "0.10.0", path = "../model" }
reactive-graph-graph = { version = "0.10.0", path = "../../graph" }
reactive-graph-lifecycle = { version = "0.10.0", path = "../../lifecycle" }
reactive-graph-reactive-service-api = { version = "0.10.0", path = "../../reactive/service/api" }
reactive-graph-type-system-api = { version = "0.10.0", path = "../../type-system/api" }

[dev-dependencies]

[lib]
crate-type = ["lib"]

[lints]
workspace = true
