[package]
name = "reactive-graph-config-api"
description = "Reactive Graph - Config - API"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../README.md"

[dependencies]
async-trait = { workspace = true }
springtime-di = { workspace = true, features = ["threadsafe", "derive"] }

reactive-graph-lifecycle = { version = "0.10.0", path = "../../lifecycle" }
reactive-graph-config-model = { version = "0.10.0", path = "../model" }

[lib]
crate-type = ["lib"]
