[package]
name = "reactive-graph-config-impl"
description = "Inexor - Reactive Graph Flow - Config - Implementation"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../README.md"

[dependencies]
async-trait = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
springtime-di = { workspace = true, features = ["threadsafe", "derive"] }
toml = { workspace = true }

reactive-graph-di = { version = "0.10.0", path = "../../di" }
reactive-graph-config-api = { version = "0.10.0", path = "../api" }
reactive-graph-config-model = { version = "0.10.0", path = "../model" }
reactive-graph-lifecycle = { version = "0.10.0", path = "../../lifecycle" }

[lib]
crate-type = ["lib"]
